@@ -1,4 +1,4 @@
-﻿SetBar()
+﻿do SetBar()
 
 procedure SetBar
 bar := "foo"
